# starter-py

./: .copierignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  Makefile  Makefile.jinja  README.md  README.md.jinja  app.py  app.py.jinja  copier.yml  main.py  main.py.jinja  pyproject.toml  pyproject.toml.jinja
.github/: copilot-instructions.md  copilot-instructions.md.jinja
.github/workflows/: ci.yml  ci.yml.jinja  release.yml  release.yml.jinja
scripts/: init.sh
src/starter_py/: __init__.py  math.py
src/{{ project_slug }}/: __init__.py.jinja
tests/: math_test.py  math_test.py.jinja
